--- a/spotlight/spotlight.csproj
+++ b/spotlight/spotlight.csproj
@@ -65,7 +65,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ListItem\Groups.cs" />
+    <Compile Include="ListItem\FileInformationSmall.cs" />
     <Compile Include="SearchEngine.cs" />
+    <Compile Include="ListItem\SearchListItem.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -74,7 +77,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="FileInformation.cs" />
+    <Compile Include="ListItem\FileInformation.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
