--- a/spotlight/spotlight.csproj
+++ b/spotlight/spotlight.csproj
@@ -66,7 +66,8 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ListItem\Groups.cs" />
-    <Compile Include="ListItem\FileInformationSmall.cs" />
+    <Compile Include="ListItem\SearchItemSmallTitle.cs" />
+    <Compile Include="ListItem\SearchItemTile.cs" />
     <Compile Include="SearchEngine.cs" />
     <Compile Include="ListItem\SearchItem.cs" />
     <Page Include="MainWindow.xaml">
