--- a/spotlight/packages.config
+++ b/spotlight/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.3.0" targetFramework="net452" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net452" />
 </packages>
